--- a/synthflow/README
+++ b/synthflow/README
@@ -10,7 +10,7 @@ https://www.udemy.com/vsd-a-complete-guide-to-install-open-source-eda-tools/ (FR
 
 NOTE : test.tcl is to verify and understand read_sdc.proc
 
-NOTE : If you want to understand what does "vsdsynth" do, please enroll in below TCL Programming courses:
+NOTE : If you want to understand what does "synthflow" do, please enroll in below TCL Programming courses:
 
 TCL programming - Part 1:
 https://www.udemy.com/vsd-tcl-programming-from-novice-to-expert/
