--- a/synthflow/README
+++ b/synthflow/README
@@ -4,7 +4,7 @@ Read below instructions to run "synthflow" on your machine
 https://www.udemy.com/vsd-a-complete-guide-to-install-open-source-eda-tools/ (FREE course)
 
 2) Once you install all necessary tools from above links, use the below command to run "vsdsynth" (also shown in TCL Programming Part 1 & Part 2 courses)
-./vsdsynth openMSP430_design_details.csv 
+./synthflow openMSP430_design_details.csv 
 
 3) In order to run test.tcl, step no. 2) must be run atleast once. 
 
