--- a/Spodrue/README
+++ b/Spodrue/README
@@ -1,16 +1,16 @@
-Read below instructions to run "synthflow" on your machine
+Read below instructions to run "spodrue" on your machine
 
-1) Make sure you install "opentimer" and "yosys" opensource EDA tools before running "vsdsynth". Installation detail video can be found in below link:
+1) Make sure you install "opentimer" and "yosys" opensource EDA tools before running "spodrue". Installation detail video can be found in below link:
 https://www.udemy.com/vsd-a-complete-guide-to-install-open-source-eda-tools/ (FREE course)
 
-2) Once you install all necessary tools from above links, use the below command to run "vsdsynth" (also shown in TCL Programming Part 1 & Part 2 courses)
+2) Once you install all necessary tools from above links, use the below command to run "spodrue" (also shown in TCL Programming Part 1 & Part 2 courses)
 ./synthflow openMSP430_design_details.csv 
 
 3) In order to run test.tcl, step no. 2) must be run atleast once. 
 
 NOTE : test.tcl is to verify and understand read_sdc.proc
 
-NOTE : If you want to understand what does "synthflow" do, please enroll in below TCL Programming courses:
+NOTE : If you want to understand what does "spodrue" do, please enroll in below TCL Programming courses:
 
 TCL programming - Part 1:
 https://www.udemy.com/vsd-tcl-programming-from-novice-to-expert/
