--- a/spodrue/README
+++ b/spodrue/README
@@ -10,7 +10,7 @@ https://www.udemy.com/vsd-a-complete-guide-to-install-open-source-eda-tools/ (FR
 
 NOTE : test.tcl is to verify and understand read_sdc.proc
 
-NOTE : If you want to understand what does "vsdsynth" do, please enroll in below TCL Programming courses:
+NOTE : If you want to understand what does "spodrue" do, please enroll in below TCL Programming courses:
 
 TCL programming - Part 1:
 https://www.udemy.com/vsd-tcl-programming-from-novice-to-expert/
@@ -18,8 +18,5 @@ https://www.udemy.com/vsd-tcl-programming-from-novice-to-expert/
 TCL programming - Part 2:
 https://www.udemy.com/vsd-tcl-programming-from-novice-to-expert-part-2/
 
-#---------------------------------------------------------------------#
-"vsdsynth" is Developed and Maintained by VLSI System Design Corporation Pvt. Ltd.
-For any queries and bugs, please drop a mail to kunalpghosh@gmail.com
-#---------------------------------------------------------------------#
+
 
